[package]

name = "rslock"
version = "0.3.0"
authors = [
  "Jan-Erik Rediger <badboy@archlinux.us>",
  "Romain Boces <bocesr@gmail.com>",
  "hexcowboy <hex@cowboy.dev",
]

keywords = ["distributed", "locking", "dls", "redis", "redlock"]
description = "Implementation of the distributed locking mechanism built on top of Async Redis"

homepage = "https://github.com/hexcowboy/redlock-async-rs"
repository = "https://github.com/hexcowboy/redlock-async-rs"

license = "BSD-3-Clause"
readme = "README.md"
edition = "2021"

[features]
async-std-comp = ["redis/async-std-comp"]
tokio-comp = ["redis/tokio-comp"]
default = ["async-std-comp"]

[dependencies]
redis = { version = "0.21.6" }
tokio = { version = "1.27.0", features = ["rt", "time"] }
rand = "0.8.5"
futures = "0.3.24"

[dev-dependencies]
once_cell = "1.15"
testcontainers = "0.14"
anyhow = "1.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
